@@ -1,40 +1,44 @@
 package com.in28minutes.springboot.controller;
 
-import static org.junit.jupiter.api.Assertions.assertTrue;
-
-import java.util.List;
-
 import com.in28minutes.springboot.StudentServicesApplication;
 import com.in28minutes.springboot.model.Course;
 import org.json.JSONException;
+import org.jspecify.annotations.NonNull;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.skyscreamer.jsonassert.JSONAssert;
 import org.springframework.boot.test.context.SpringBootTest;
-import org.springframework.boot.test.web.client.TestRestTemplate;
-import org.springframework.boot.test.web.server.LocalServerPort;
+import org.springframework.boot.web.server.test.LocalServerPort;
 import org.springframework.http.HttpEntity;
 import org.springframework.http.HttpHeaders;
 import org.springframework.http.HttpMethod;
 import org.springframework.http.ResponseEntity;
 import org.springframework.test.context.junit.jupiter.SpringExtension;
+import org.springframework.web.client.RestTemplate;
+
+import java.util.List;
+
+import static org.junit.jupiter.api.Assertions.assertTrue;
 
 @ExtendWith(SpringExtension.class)
 @SpringBootTest(classes = StudentServicesApplication.class, webEnvironment = SpringBootTest.WebEnvironment.RANDOM_PORT)
 public class StudentControllerIT {
+
     @LocalServerPort
     private int port;
 
-    TestRestTemplate restTemplate = new TestRestTemplate();
+    RestTemplate restTemplate = new RestTemplate();
+
+    //TestRestTemplate restTemplate = new TestRestTemplate();
 
     HttpHeaders headers = new HttpHeaders();
 
     @Test
     public void testRetrieveStudentCourse() throws JSONException {
 
-        HttpEntity<String> entity = new HttpEntity<>(null, headers);
+        HttpEntity<@NonNull String> entity = new HttpEntity<>(null, headers);
 
-        ResponseEntity<String> response = restTemplate.exchange(
+        ResponseEntity<@NonNull String> response = restTemplate.exchange(
                 createURLWithPort("/students/Student1/courses/Course1"),
                 HttpMethod.GET, entity, String.class);
 
@@ -49,13 +53,13 @@ public class StudentControllerIT {
         Course course = new Course("Course1", "Spring", "10Steps",
                 List.of("Learn Maven", "Import Project", "First Example", "Second Example"));
 
-        HttpEntity<Course> entity = new HttpEntity<>(course, headers);
+        HttpEntity<@NonNull Course> entity = new HttpEntity<>(course, headers);
 
-        ResponseEntity<String> response = restTemplate.exchange(
+        ResponseEntity<@NonNull String> response = restTemplate.exchange(
                 createURLWithPort("/students/Student1/courses"),
                 HttpMethod.POST, entity, String.class);
 
-        String actual = response.getHeaders().get(HttpHeaders.LOCATION).get(0);
+        String actual = response.getHeaders().get(HttpHeaders.LOCATION).getFirst();
 
         assertTrue(actual.contains("/students/Student1/courses/"));
 
